[package]
name = "prism"
version = "0.1.0"
edition = "2021"

[lib]
name = "prism"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
brotli-decompressor = "2.3.4"
chrono = "0.4.26"
flate2 = "1.0"
log = "0.4.18"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
syslog = "6.1.0"
zstream = { git = "https://github.com/51390/zstream-rs.git", version = "0.1.0" }
